--- a/pages/myGame/myGame.wxml
+++ b/pages/myGame/myGame.wxml
@@ -4,23 +4,18 @@
     <view class="weui-tab">
       <view class="weui-navbar">
         <block wx:for="{{tabs}}" wx:key="*this">
-          <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}"
-                  bindtap="tabClick">
+          <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
             <view class="weui-navbar__title">{{item}}</view>
           </view>
         </block>
-        <view class="weui-navbar__slider"
-                      style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);">
-                
-        </view>
+        <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
       </view>
       <view class="weui-tab__panel">
         <view class="weui-search-bar">
           <view class="weui-search-bar__form">
             <view class="weui-search-bar__box">
               <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
-              <input type="text" class="weui-search-bar__input" placeholder="键入比赛名或发布者以搜索"
-                                   value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping"  />
+              <input type="text" class="weui-search-bar__input" placeholder="键入比赛名或发布者以搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" />
               <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
                 <icon type="clear" size="14"></icon>
               </view>
@@ -30,7 +25,9 @@
               <view class="weui-search-bar__text">搜索</view>
             </label>
           </view>
-          <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>
+          <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">
+            取消
+          </view>
         </view>
         <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
           <view class="page__hd">
@@ -53,131 +50,163 @@
                 <view class="weui-form-preview__bd">
                   <view class="weui-form-preview__item">
                     <view class="weui-form-preview__label">发布者</view>
-                      <view class="weui-form-preview__value">
-                        <image src="{{item.publisherAvatar}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-                        {{item.gamePublisher}}
-                      </view>
-                    </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">日期</view>
-                      <view wx:if="{{!item.expired}}" class="weui-form-preview__value">{{item.gameDate}}</view>
-                      <view wx:else class="weui-form-preview__value date-expired">{{item.gameDate}}</view>
-                    </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">时间</view>
-                      <view class="weui-form-preview__value">{{item.gameTime}} ~ {{item.gameEndTime}}</view>
-                    </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">需要裁判</view>
-                      <view class="weui-form-preview__value">{{item.refereeNumber}}</view>
+                    <view class="weui-form-preview__value">
+                      <image src="{{item.gamePublisher.userInfo.refereeWeixinInfo.avatarUrl}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+                      {{item.gamePublisher.name}}
                     </view>
                   </view>
-                  <view class="weui-form-preview__ft">
-                    <navigator url="/pages/enrol/enrol?colId={{item._id}}" class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active">报名</navigator>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">开始时间</view>
+                    <view wx:if="{{!item.expired}}" class="weui-form-preview__value">
+                      {{item.gameStartTime}}
+                    </view>
+                    <view wx:else class="weui-form-preview__value date-expired">
+                      {{item.gameStartTime}}
+                    </view>
                   </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">结束时间</view>
+                    <view wx:if="{{!item.expired}}" class="weui-form-preview__value">
+                      {{item.gameEndTime}}
+                    </view>
+                    <view wx:else class="weui-form-preview__value date-expired">
+                      {{item.gameEndTime}}
+                    </view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">需要裁判</view>
+                    <view class="weui-form-preview__value">{{item.requiredRefereeAmount}}</view>
+                  </view>
+                </view>
+                <view class="weui-form-preview__ft">
+                  <navigator url="/pages/enrol/enrol?colId={{item._id}}" class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active">
+                    报名
+                  </navigator>
                 </view>
               </view>
             </view>
           </view>
-          <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
-            <view class="page__hd">
-              <view class="page__title">我发布的</view>
+        </view>
+        <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
+          <view class="page__hd">
+            <view class="page__title">我发布的</view>
+          </view>
+          <block wx:if="{{myCreatedGames.length === 0}}">
+            <view class="weui-loadmore weui-loadmore_line">
+              <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据 - 下拉以刷新</view>
             </view>
-            <block wx:if="{{myCreatedGames.length === 0}}">
-              <view class="weui-loadmore weui-loadmore_line">
-                <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据 - 下拉以刷新</view>
-              </view>
-            </block>
-            <view wx:for="{{filteredGames}}" wx:key="*this">
-              <view class="page__bd">
-                <view class="weui-form-preview">
-                  <view class="weui-form-preview__hd">
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">比赛名称</view>
-                      <view class="weui-form-preview__value_in-hd">{{item.gameName}}</view>
+          </block>
+          <view wx:for="{{filteredGames}}" wx:key="*this">
+            <view class="page__bd">
+              <view class="weui-form-preview">
+                <view class="weui-form-preview__hd">
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">比赛名称</view>
+                    <view class="weui-form-preview__value_in-hd">{{item.gameName}}</view>
+                  </view>
+                </view>
+                <view class="weui-form-preview__bd">
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">发布者</view>
+                    <view class="weui-form-preview__value">
+                      <image src="{{item.gamePublisher.userInfo.refereeWeixinInfo.avatarUrl}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+                      {{item.gamePublisher.name}}
                     </view>
                   </view>
-                  <view class="weui-form-preview__bd">
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">发布者</view>
-                      <view class="weui-form-preview__value">
-                        <image src="{{item.publisherAvatar}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-                        {{item.gamePublisher}}
-                      </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">开始时间</view>
+                    <view wx:if="{{!item.expired}}" class="weui-form-preview__value">
+                      {{item.gameStartTime}}
                     </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">日期</view>
-                      <view class="weui-form-preview__value">{{item.gameDate}}</view>
-                    </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">时间</view>
-                      <view class="weui-form-preview__value">{{item.gameTime}} ~ {{item.gameEndTime}}</view>
-                    </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">需要裁判</view>
-                      <view class="weui-form-preview__value">{{item.refereeNumber}}</view>
+                    <view wx:else class="weui-form-preview__value date-expired">
+                      {{item.gameStartTime}}
                     </view>
                   </view>
-                  <view class="weui-form-preview__ft">
-                    <navigator url="/pages/enrol/enrol?colId={{item._id}}&own=true"
-                                class="weui-form-preview__btn weui-form-preview__btn_primary"
-                                hover-class="weui-form-preview__btn_active">查看</navigator>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">结束时间</view>
+                    <view wx:if="{{!item.expired}}" class="weui-form-preview__value">
+                      {{item.gameEndTime}}
+                    </view>
+                    <view wx:else class="weui-form-preview__value date-expired">
+                      {{item.gameEndTime}}
+                    </view>
                   </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">需要裁判</view>
+                    <view class="weui-form-preview__value">{{item.requiredRefereeAmount}}</view>
+                  </view>
+                </view>
+                <view class="weui-form-preview__ft">
+                  <navigator url="/pages/enrol/enrol?colId={{item._id}}&own=true" class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active">
+                    查看
+                  </navigator>
                 </view>
               </view>
             </view>
           </view>
-          <view class="weui-tab__content" hidden="{{activeIndex != 2}}">
-            <view class="page__hd">
-              <view class="page__title">我报名的</view>
+        </view>
+        <view class="weui-tab__content" hidden="{{activeIndex != 2}}">
+          <view class="page__hd">
+            <view class="page__title">我报名的</view>
+          </view>
+          <block wx:if="{{myEnroledGames.length === 0}}">
+            <view class="weui-loadmore weui-loadmore_line">
+              <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据 - 下拉以刷新</view>
             </view>
-            <block wx:if="{{myEnroledGames.length === 0}}">
-              <view class="weui-loadmore weui-loadmore_line">
-                <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据 - 下拉以刷新</view>
-              </view>
-            </block>
-            <view wx:for="{{filteredGames}}" wx:key="*this">
-              <view class="page__bd">
-                <view class="weui-form-preview">
-                  <view class="weui-form-preview__hd">
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">比赛名称</view>
-                      <view class="weui-form-preview__value_in-hd">{{item.gameName}}</view>
+          </block>
+          <view wx:for="{{filteredGames}}" wx:key="*this">
+            <view class="page__bd">
+              <view class="weui-form-preview">
+                <view class="weui-form-preview__hd">
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">比赛名称</view>
+                    <view class="weui-form-preview__value_in-hd">{{item.gameName}}</view>
+                  </view>
+                </view>
+                <view class="weui-form-preview__bd">
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">发布者</view>
+                    <view class="weui-form-preview__value">
+                      <image src="{{item.gamePublisher.userInfo.refereeWeixinInfo.avatarUrl}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+                      {{item.gamePublisher.name}}
                     </view>
                   </view>
-                  <view class="weui-form-preview__bd">
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">发布者</view>
-                      <view class="weui-form-preview__value">
-                        <image src="{{item.publisherAvatar}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-                        {{item.gamePublisher}}
-                      </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">开始时间</view>
+                    <view wx:if="{{!item.expired}}" class="weui-form-preview__value">
+                      {{item.gameStartTime}}
                     </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">日期</view>
-                      <view class="weui-form-preview__value">{{item.gameDate}}</view>
-                    </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">时间</view>
-                      <view class="weui-form-preview__value">{{item.gameTime}} ~ {{item.gameEndTime}}</view>
-                    </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">需要裁判</view>
-                      <view class="weui-form-preview__value">{{item.refereeNumber}}</view>
-                    </view>
-                    <view class="weui-form-preview__item">
-                      <view class="weui-form-preview__label">是否选派</view>
-                      <view class="weui-form-preview__value" style='color: {{item.assigned ? "green":"red"}}'>{{item.assigned ? "已选派" : "尚未"}}</view>
+                    <view wx:else class="weui-form-preview__value date-expired">
+                      {{item.gameStartTime}}
                     </view>
                   </view>
-                  <view class="weui-form-preview__ft">
-                    <navigator url="/pages/enrol/enrol?colId={{item._id}}&cancel=true"
-                                  class="weui-form-preview__btn weui-form-preview__btn_default"
-                                  hover-class="weui-form-preview__btn_active">取消报名</navigator>
-                      <navigator url="/pages/enrol/enrol?colId={{item._id}}&update=true"
-                            class="weui-form-preview__btn weui-form-preview__btn_primary"
-                              hover-class="weui-form-preview__btn_active">修改信息</navigator>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">结束时间</view>
+                    <view wx:if="{{!item.expired}}" class="weui-form-preview__value">
+                      {{item.gameEndTime}}
+                    </view>
+                    <view wx:else class="weui-form-preview__value date-expired">
+                      {{item.gameEndTime}}
+                    </view>
                   </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">需要裁判</view>
+                    <view class="weui-form-preview__value">{{item.requiredRefereeAmount}}</view>
+                  </view>
+                  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__label">是否选派</view>
+                    <view class="weui-form-preview__value" style='color: {{item.assigned ? "green":"red"}}'>
+                      {{item.assigned ? "已选派" : "尚未"}}
+                    </view>
+                  </view>
+                </view>
+                <view class="weui-form-preview__ft">
+                  <navigator url="/pages/enrol/enrol?colId={{item._id}}&cancel=true" class="weui-form-preview__btn weui-form-preview__btn_default" hover-class="weui-form-preview__btn_active">
+                    取消报名
+                  </navigator>
+                  <navigator url="/pages/enrol/enrol?colId={{item._id}}&update=true" class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active">
+                    修改信息
+                  </navigator>
                 </view>
               </view>
             </view>
@@ -185,10 +214,11 @@
         </view>
       </view>
     </view>
-    <view class="weui-footer weui-footer_fixed-bottom" style="position:relative;bottom:20px">
-      <view class="weui-footer__links">
-        <view class="weui-footer__link">SoraYama</view>
-      </view>
+  </view>
+  <view class="weui-footer weui-footer_fixed-bottom" style="position:relative;bottom:20px">
+    <view class="weui-footer__links">
+      <view class="weui-footer__link">SoraYama</view>
+    </view>
     <view class="weui-footer__text">Copyright © 2019 sorayamah.org</view>
   </view>
 </view>
