--- a/pages/enrol/enrol.wxml
+++ b/pages/enrol/enrol.wxml
@@ -15,119 +15,122 @@
       <view class="weui-form-preview__bd">
         <view class="weui-form-preview__label">发布者</view>
         <view class="weui-form-preview__value">
-          <image src="{{game.publisherAvatar}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-          {{game.gamePublisher}}
-          </view>
-          <view class="weui-form-preview__item">
-            <view class="weui-form-preview__label">日期</view>
-            <view class="weui-form-preview__value">{{game.gameDate}}</view>
-          </view>
-          <view class="weui-form-preview__item">
-            <view class="weui-form-preview__label">时间</view>
-            <view class="weui-form-preview__value">{{game.gameTime}} ~ {{game.gameEndTime}}</view>
-          </view>
-          <view class="weui-form-preview__item">
-            <view class="weui-form-preview__label">需要裁判</view>
-            <view class="weui-form-preview__value">{{game.refereeNumber}} 人次</view>
-          </view>
-          <block wx:if="{{own}}">
-            <view class="weui-form-preview__item">
-              <view class="weui-form-preview__label">现已报名</view>
-              <view class="weui-form-preview__value">{{game.referees ? game.referees.length : 0}} 人</view>
-            </view>
-          </block>
-          <block wx:if="{{own}}">
-            <view class="weui-form-preview__item">
-              <view class="weui-form-preview__label">现已选派</view>
-              <view class="weui-form-preview__value">{{refereeNames}} 共 {{assignedRefereeNum}} 人</view>
-            </view>
-          </block>
+          <image src="{{game.gamePublisher.userInfo.refereeWeixinInfo.avatarUrl}}"
+            style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+          {{game.gamePublisher.name}}
         </view>
+        <view class="weui-form-preview__item">
+          <view class="weui-form-preview__label">开始时间</view>
+          <view class="weui-form-preview__value">{{game.gameStartTime}}</view>
+        </view>
+        <view class="weui-form-preview__item">
+          <view class="weui-form-preview__label">结束时间</view>
+          <view class="weui-form-preview__value">{{game.gameEndTime}}</view>
+        </view>
+        <view class="weui-form-preview__item">
+          <view class="weui-form-preview__label">需要裁判</view>
+          <view class="weui-form-preview__value">{{game.requiredRefereeAmount}} 人次</view>
+        </view>
+        <block wx:if="{{own}}">
+          <view class="weui-form-preview__item">
+            <view class="weui-form-preview__label">现已报名</view>
+            <view class="weui-form-preview__value">{{game.referees ? game.referees.length : 0}} 人</view>
+          </view>
+        </block>
+        <block wx:if="{{own}}">
+          <view class="weui-form-preview__item">
+            <view class="weui-form-preview__label">现已选派</view>
+            <view class="weui-form-preview__value">{{refereeNames}} 共 {{assignedRefereeNum}} 人</view>
+          </view>
+        </block>
       </view>
     </view>
-    <block wx:if="{{!cancel && !own}}">
-      <view class="weui-cells__title">请输入报名信息</view>
-      <view class="weui-cells__title">注意：如需修改信息请尽早（在选派之前）修改</view>
-      <form bindreset='formReset' bindsubmit='formSubmit'>
-        <view class="weui-cells weui-cells_after-title">
-          <view class="weui-cell weui-cell_input">
-            <view class="weui-cell__hd">
-              <view class="weui-label">姓名</view>
-            </view>
-            <view class="weui-cell__bd">
-              <input class="weui-input" placeholder="请输入你的姓名" name="refereeName" bindinput="bindRefereeNameChange"
-                     value='{{myName}}'  />
-            </view>
+  </view>
+  <block wx:if="{{!cancel && !own}}">
+    <view class="weui-cells__title">请输入报名信息</view>
+    <view class="weui-cells__title">注意：如需修改信息请尽早（在选派之前）修改</view>
+    <form bindreset='formReset' bindsubmit='formSubmit'>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">姓名</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input class="weui-input" placeholder="请输入你的姓名" name="refereeName" bindinput="bindRefereeNameChange"
+              value='{{myName}}' />
           </view>
         </view>
-        <view class="weui-cells__title">可执法时段</view>
-        <view class="weui-cells weui-cells_after-title">
-          <checkbox-group bindchange="checkboxChange" name="availablePeriod">
-            <label class="weui-cell weui-check__label" wx:for="{{checkboxItems}}" wx:key="value">
-              <checkbox class="weui-check" value="{{item.name}}" checked="{{item.checked}}"  />
-              <view class="weui-cell__hd weui-check__hd_in-checkbox">
-                <icon class="weui-icon-checkbox_circle" type="circle" size="23" wx:if="{{!item.checked}}"></icon>
-                <icon class="weui-icon-checkbox_success" type="success" size="23" wx:if="{{item.checked}}"></icon>
-              </view>
-              <view class="weui-cell__bd">{{item.name}}</view>
-            </label>
-          </checkbox-group>
-        </view>
-        <view class="weui-btn-area">
-          <button class="weui-btn" type="primary" formType="submit">确认</button>
-        </view>
-      </form>
-    </block>
-    <block wx:if="{{cancel}}">
+      </view>
+      <view class="weui-cells__title">可执法时段</view>
+      <view class="weui-cells weui-cells_after-title">
+        <checkbox-group bindchange="checkboxChange" name="availablePeriod">
+          <label class="weui-cell weui-check__label" wx:for="{{checkboxItems}}" wx:key="value">
+            <checkbox class="weui-check" value="{{item.name}}" checked="{{item.checked}}" />
+            <view class="weui-cell__hd weui-check__hd_in-checkbox">
+              <icon class="weui-icon-checkbox_circle" type="circle" size="23" wx:if="{{!item.checked}}"></icon>
+              <icon class="weui-icon-checkbox_success" type="success" size="23" wx:if="{{item.checked}}"></icon>
+            </view>
+            <view class="weui-cell__bd">{{item.name}}</view>
+          </label>
+        </checkbox-group>
+      </view>
       <view class="weui-btn-area">
-        <button class="weui-btn" type="warn" bindtap="cancelEnrol">取消报名</button>
+        <button class="weui-btn" type="primary" formType="submit">确认</button>
+      </view>
+    </form>
+  </block>
+  <block wx:if="{{cancel}}">
+    <view class="weui-btn-area">
+      <button class="weui-btn" type="warn" bindtap="cancelEnrol">取消报名</button>
+    </view>
+  </block>
+  <block wx:if="{{own}}">
+    <view class="weui-cells__title">现有报名人员</view>
+    <block wx:if="{{!game.referees || game.referees.length === 0}}">
+      <view class="weui-loadmore weui-loadmore_line">
+        <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
       </view>
     </block>
-    <block wx:if="{{own}}">
-      <view class="weui-cells__title">现有报名人员</view>
-      <block wx:if="{{!game.referees || game.referees.length === 0}}">
-        <view class="weui-loadmore weui-loadmore_line">
-          <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
-        </view>
-      </block>
-      <view wx:for="{{game.referees}}" wx:key="*this">
-        <view class="page__bd">
-          <view class="weui-form-preview">
-            <view class="weui-form-preview__hd">
-              <view class="weui-form-preview__item">
-                <view class="weui-form-preview__label">姓名</view>
-                <view class="weui-form-preview__value_in-hd">
-                  <image src="{{item.userInfo && item.userInfo.avatarUrl}}"
-                         style="margin-right: 5px;vertical-align: middle;width:25px; height: 25px;"></image>
-                  {{item.refereeName}}
-                </view>
-                </view>
+    <view wx:for="{{game.referees}}" wx:key="*this">
+      <view class="page__bd">
+        <view class="weui-form-preview">
+          <view class="weui-form-preview__hd">
+            <view class="weui-form-preview__item">
+              <view class="weui-form-preview__label">姓名</view>
+              <view class="weui-form-preview__value_in-hd">
+                <image src="{{item.referee.refereeWeixinInfo.avatarUrl}}"
+                  style="margin-right: 5px;vertical-align: middle;width:25px; height: 25px;"></image>
+                {{item.enrolName}}
               </view>
-              <view class="weui-form-preview__bd">
-                <view class="weui-form-preview__item">
-                  <view class="weui-form-preview__label">可执法时段</view>
-                  <view class="weui-form-preview__value">{{item.availablePeriod}}</view>
-                </view>
-              </view>
-              <block wx:if="{{!item.assigned}}">
-                <view class="weui-form-preview__ft">
-                  <button class="weui-form-preview__btn weui-form-preview__btn_primary" hover-class="weui-form-preview__btn_active"
-                          bindtap="assign" data-openid="{{item.openid}}">选派</button>
-                </view>
-              </block>
-              <block wx:if="{{item.assigned}}">
-                <view class="weui-form-preview__ft">
-                  <button class="weui-form-preview__btn weui-form-preview__btn_default" hover-class="weui-form-preview__btn_active"
-                          bindtap="assign" data-openid="{{item.openid}}">撤销</button>
-                </view>
-              </block>
             </view>
           </view>
+          <view class="weui-form-preview__bd">
+            <view class="weui-form-preview__item">
+              <view class="weui-form-preview__label">可执法时段</view>
+              <view class="weui-form-preview__value">{{item.availablePeriod}}</view>
+            </view>
+          </view>
+          <block wx:if="{{!item.assigned}}">
+            <view class="weui-form-preview__ft">
+              <button class="weui-form-preview__btn weui-form-preview__btn_primary"
+                hover-class="weui-form-preview__btn_active" bindtap="assign" data-iscancle="{{false}}"
+                data-id="{{item.referee._id}}">选派</button>
+            </view>
+          </block>
+          <block wx:if="{{item.assigned}}">
+            <view class="weui-form-preview__ft">
+              <button class="weui-form-preview__btn weui-form-preview__btn_default"
+                hover-class="weui-form-preview__btn_active" bindtap="assign" data-iscancle="{{true}}"
+                data-id="{{item.referee._id}}">撤销</button>
+            </view>
+          </block>
         </view>
-      </block>
-      <block wx:if="{{own}}">
-        <view class="weui-btn-area">
-          <button class="weui-btn" type="warn" bindtap="onDeleteGame">删除比赛</button>
-        </view>
-      </block>
+      </view>
     </view>
+  </block>
+  <block wx:if="{{own}}">
+    <view class="weui-btn-area">
+      <button class="weui-btn" type="warn" bindtap="onDeleteGame">删除比赛</button>
+    </view>
+  </block>
+</view>
