--- a/pages/myGame/myGame.wxml
+++ b/pages/myGame/myGame.wxml
@@ -216,6 +216,10 @@
     </view>
   </view>
   <view class="weui-footer weui-footer_fixed-bottom" style="position:relative;bottom:20px">
+    <view class="weui-btn-area">
+      <button type="primary" class="weui-btn" open-type="getUserInfo">登录</button>
+    </view>
+
     <view class="weui-footer__links">
       <view class="weui-footer__link">SoraYama</view>
     </view>
